examples/container-deny-privileged/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyPrivileged
  targets:
  - libs:
    - |
      package lib.core

      default is_gatekeeper = false

      is_gatekeeper {
          has_field(input, "review")
          has_field(input.review, "object")
      }

      resource = input.review.object {
          is_gatekeeper
      }

      resource = input {
          not is_gatekeeper
      }

      format(msg) = msg {
          not is_gatekeeper
      }

      format(msg) = {"msg": msg} {
          is_gatekeeper
      }

      apiVersion = resource.apiVersion
      name = resource.metadata.name
      kind = resource.kind
      labels = resource.metadata.labels
      annotations = resource.metadata.annotations

      has_field(obj, field) {
          not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) = true {
          obj[field] == ""
      }

      missing_field(obj, field) = true {
          not has_field(obj, field)
      }
    - |
      package lib.pods

      import data.lib.core

      default pod = false

      pod = core.resource.spec.template {
          pod_templates := ["daemonset","deployment","job","replicaset","replicationcontroller","statefulset"]
          lower(core.kind) == pod_templates[_]
      }

      pod = core.resource {
          lower(core.kind) == "pod"
      }

      pod = core.resource.spec.jobTemplate.spec.template {
          lower(core.kind) == "cronjob"
      }

      containers[container] {
          keys = {"containers", "initContainers"}
          all_containers = [c | keys[k]; c = pod.spec[k][_]]
          container = all_containers[_]
      }

      volumes[volume] {
          volume = pod.spec.volumes[_]
      }
    - |
      package lib.security

      dropped_capability(container, cap) {
          lower(container.securityContext.capabilities.drop[_]) == lower(cap)
      }

      dropped_capability(psp, cap) {
          lower(psp.spec.requiredDropCapabilities[_]) == lower(cap)
      }

      added_capability(container, cap) {
          lower(container.securityContext.capabilities.add[_]) == lower(cap)
      }

      added_capability(psp, cap) {
          lower(psp.spec.allowedCapabilities[_]) == lower(cap)
      }

      added_capability(psp, cap) {
          lower(psp.spec.defaultAddCapabilities[_]) == lower(cap)
      }
    rego: |
      package container_deny_privileged

      import data.lib.core
      import data.lib.pods
      import data.lib.security


      violation[msg] {
        pods.containers[container]
        is_privileged(container)

        msg = core.format(sprintf("%s/%s/%s: Containers must not run as privileged", [core.kind, core.name, container.name]))
      }

      is_privileged(container) {
        container.securityContext.privileged
      }

      is_privileged(container) {
        security.added_capability(container, "CAP_SYS_ADMIN")
      }
    target: admission.k8s.gatekeeper.sh
status: {}
